# learning-rust

00_primes/: Cargo.toml
00_primes/src/: main.rs
01_io/: Cargo.toml
01_io/src/: main.rs
02_enums_and_lists/: Cargo.toml
02_enums_and_lists/src/: main.rs
03_error_handling/: Cargo.toml
03_error_handling/src/: main.rs
helloworld/: Cargo.toml
