[package]
name = "error_handling"
version = "1.0.0"
edition = "2021"
authors = ["Danny Piper <djpiper28@gmail.com>"]

[dependencies]
hyper = { version = "0.14.16", features = ["client", "http1", "tcp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.15.0", features = ["full"] }
float-ord = { version = "0.3.2" }

